Closed
Bug 1657600
Opened 5 years ago
Closed 5 years ago
WebRender not enabled by default on OSX on beta
Categories
(Core :: Graphics: WebRender, defect)
Tracking
()
RESOLVED
FIXED
81 Branch
People
(Reporter: aosmond, Assigned: aosmond)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta-
|
Details | Review |
No description provided.
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 1•5 years ago
|
||
Pushed by aosmond@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/be5b134276bd
Fix how WebRender was not enabled on OSX by default for early beta. r=ktaeleman
| Assignee | ||
Comment 3•5 years ago
|
||
Comment on attachment 9168473 [details]
Bug 1657600 - Fix how WebRender was not enabled on OSX by default for early beta.
Beta/Release Uplift Approval Request
- User impact if declined: We won't get as much WebRender coverage in early beta as we planned.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: Start Firefox on beta without the patch. Get basic compositor. With the patch, get WebRender.
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Trivial change. The main risk is about turning on WebRender itself, but it is only for early beta, has been running in nightly for some time without issue.
- String changes made/needed: N/A
Attachment #9168473 -
Flags: approval-mozilla-beta?
| Assignee | ||
Updated•5 years ago
|
Flags: qe-verify+
Comment 4•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
Updated•5 years ago
|
QA Whiteboard: [qa-triaged]
Comment 5•5 years ago
|
||
This issue is Verified as Fixed in our latest nightly build 81.0a1 (2020-08-06) on Mac OSX 10.14
Comment 6•5 years ago
|
||
Comment on attachment 9168473 [details]
Bug 1657600 - Fix how WebRender was not enabled on OSX by default for early beta.
early beta for 80 is over.
Attachment #9168473 -
Flags: approval-mozilla-beta? → approval-mozilla-beta-
Updated•5 years ago
|
| Assignee | ||
Comment 7•5 years ago
|
||
(In reply to Julien Cristau [:jcristau] from comment #6)
Comment on attachment 9168473 [details]
Bug 1657600 - Fix how WebRender was not enabled on OSX by default for early beta.early beta for 80 is over.
Well, that's embarrassing. I keep forgetting how short the cycle is. Next train then!
| Assignee | ||
Updated•5 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•