Bug 1657600 - Fix how WebRender was not enabled on OSX by default for early beta. r=ktaeleman

Differential Revision: https://phabricator.services.mozilla.com/D86195